Add a landing page and improvements/refactoring

--- a/src/videoPlayer.html
+++ b/src/videoPlayer.html
@@ -11,23 +11,24 @@
 </head>
 <body>
     <header class="header">
-        <img class="headerImage" src="/src/media/logo.png" alt="Logo">
-        <nav class="headerMenu">
-            <a class="headerMenuItem" href="https://www.linkedin.com/in/nicholas-noronha-1b613817a/" target="_blank">Contato Linkedin</a>
-            <a class="headerMenuItem" href="">Parceiros</a>
-            <a class="headerMenuItem" href="">Sobre Mim</a>
+        <img class="header-image" src="/src/media/logo.png" alt="Logo">
+        <nav class="header-menu">
+            <a class="header-menu-item" href="https://www.linkedin.com/in/nicholas-noronha-1b613817a/" target="_blank">Linkedin</a>
+            <a class="header-menu-item" href="">Partners</a>
+            <a class="header-menu-item" href="">About Me!</a>
         </nav>     
     </header>
 
     <main class="content">
-        <section class="mainContent">
-            <div class="mainCopntentWrited">
-                <h1 class="mainCopntentWritedTitle">Nicholas Noronha</h1>
-                <h2 class="mainCopntentWritedSubtitle">Lorem</h2>
-                <button class="mainCopntentButton">Conheça meu trabalho!</button>
+        <section class="main-content">
+            <div class="main-content-writed">
+                <h2 class="main-content-writed-title">My Fisrt Landing Page!</h2>
+                <h3 class="main-content-writed-subtitle"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident earum, quia quos nam 
+                    nostrum recusandae voluptate ducimus minus, magni ea, vel nemo. Numquam nesciunt dolorem ut qui ducimus asperiores quod!</h3>
+                <button class="main-content-button" ><a class="git-button" href="https://github.com/nicholasnoronha" target="_blank"> My GitHub </a></button>
             </div>
             <div class="video-player">
-                <video src="/src/media/aa.mp4" poster="/src/media/videoPoster.png" class="video"></video>
+                <video src="/src/media/clounds.mp4" poster="/src/media/videoPoster.png" class="video"></video>                
                 <div class="player-controls">
                     <div class="progress-bar">
                         <div class="progress"></div>
@@ -36,12 +37,13 @@
                     <div class="inner-player-controls">
                         <button class="play-button" title="Play">►</i></i></button>
                         <div class="hoverable-volume">
-                        <button class="mute control-button"> <!-- aria-label="Mute" para acessibilidade -->
-                            <div class="slash"></div>
-                            <i class="fas fa-volume-up"></i>
-                        </button>
-                        <input type="range" class="volume hide" min="0" max="1" step="0.01" value="0.5">        
+                            <button class="mute control-button"> <!-- aria-label="Mute" para acessibilidade -->
+                                <div class="slash"></div>
+                                <i class="fas fa-volume-up"></i>
+                            </button>
+                            <input type="range" class="volume hide" min="0" max="1" step="0.01" value="0.5">        
                         </div>
+                        <!-- <div width="50%"></div> -->
                         <button class="fullscreen control-button">
                             <i class="fas fa-expand"></i>
                         </button>    
@@ -54,20 +56,16 @@
             </div>
             <script src="/src/video.js"></script>
         </section>
-        <section class="secondaryContent">
-            <h3 class="secondaryContentTitle">Loren</h3>
-            <p class="secondaryContentTitleParagraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam ea exercitationem harum, alias reprehenderit cumque et facere recusan. </p>
-            <p class="secondaryContentTitleParagraph">Lorem ipsum dolor, sit amet consectetconsectetur adipisicing elit. Nam ea exercitationem harum, alias reprehenderit cumque et facere recusan.</p>
-            <p class="secondaryContentTitleParagraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam ea exercitationem harum, alias reprehenderit cumque et facere recusan.</p>
+        <section class="secondary-content">
+            <h3 class="secondary-content-title">Loren</h3>
+            <p class="secondary-content-title-paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam ea exercitationem harum, alias reprehenderit cumque et facere recusan. </p>
+            <p class="secondary-content-title-paragraph">Lorem ipsum dolor, sit amet consectetconsectetur adipisicing elit. Nam ea exercitationem harum, alias reprehenderit cumque et facere recusan.</p>
+            <p class="secondary-content-title-paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam ea exercitationem harum, alias reprehenderit cumque et facere recusan.</p>
         </section>
     </main>
     
     <footer class="footer">
-        <i class="fab fa-facebook"></i>
-        <i class="fa fa-volume"></i>
-        <i class="fa fa-pause"></i>
-
-        <img class="footerImage" src="/src/media/logo.png" alt="Logo">
+        <img class="footer-image" src="/src/media/logo.png" alt="Logo">
     </footer>
 </body>
 </html>
