--- a/src/videoPlayer.html
+++ b/src/videoPlayer.html
@@ -37,11 +37,11 @@
                     <div class="inner-player-controls">
                         <button class="play-button" title="Play">►</i></i></button>
                         <div class="hoverable-volume">
-                            <button class="mute control-button"> <!-- aria-label="Mute" para acessibilidade -->
+                            <button class="mute control-button">
                                 <div class="slash"></div>
                                 <i class="fas fa-volume-up"></i>
                             </button>
-                            <input type="range" class="volume hide" min="0" max="1" step="0.01" value="0.5">        
+                            <input type="range" class="volume" min="0" max="1" step="0.01" value="0.5"> <!-- class hide to use with js-->   
                         </div>
                         <button class="fullscreen control-button">
                             <i class="fas fa-expand"></i>
